update thank you

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ngọc Tuyên | Java Developer</title>
+  <title>Ngọc Tuyên | Hello</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
     <div class="container">
       <img src="img/romvang/avt.jpg" alt="Avatar" class="avatar">
       <h1>Ngọc Tuyên</h1>
-      <p class="title">Java Developer</p>
+      <p class="title">Hello</p>
       <p class="subtitle">
         Java • Spring Boot • Thymeleaf • JavaScript • Tools AI
       </p>
@@ -196,13 +196,25 @@ I have worked in many different jobs and gained a lot of experience. I want to d
 
 
   <!-- CONTACT -->
-  <section class="section gray">
-    <div class="container">
-      <h2>Liên hệ</h2>
-      <p>Email: <a href="mailto:ngoctuyen@email.com">ngoctuyen@email.com</a></p>
+  <!-- THANK YOU SECTION -->
+<section class="section thank-you">
+  <div class="container thank-you-box">
+    <h2>Cảm ơn bạn đã dành thời gian xem portfolio</h2>
 
+    <p>
+      Tôi luôn sẵn sàng trao đổi thêm về kinh nghiệm, dự án đã thực hiện
+      cũng như các cơ hội hợp tác trong lĩnh vực Công nghệ & Kinh doanh.
+    </p>
+
+    <div class="thank-actions">
+      <a href="mailto:ngoctuyenzetsu@email.com" class="btn primary">Email</a>
+      <p>Phone: 0355691456</p>
     </div>
-  </section>
+
+    <span class="thank-sign">— Ngọc Tuyên</span>
+  </div>
+</section>
+
 
   <footer class="footer">
     © 2026 Ngọc Tuyên
