up giới thiệu bản thân

--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@
       <h2>Giới thiệu</h2>
       <p>
 Chào mọi người, tên tôi là Tuyên. Tôi 21 tuổi. Tôi sinh ra và lớn lên ở Vĩnh Phúc. Hiện tại, tôi là một thanh niên với nhiều hoài bão. Vì vậy, công việc, bạn bè, gia đình và tiền bạc là mục tiêu và động lực của tôi.
-Tôi đã làm nhiều công việc khác nhau và tích lũy được nhiều kinh nghiệm. Tôi muốn cống hiến hết mình cho công việc mà tôi luôn mơ ước.
+Tôi mong muốn được cống hiến hết mình cho công việc và tích luỹ thêm nhiều kinh nghiệm. 
 <br>
-    Hello everyone, my name is Tuyên. I am 21 years old. I was born and raised in Vinh Phuc. Now , I am a young man with many ambitions. Therefore, work, friends, family, and money that my target and motivators.
-I have worked in many different jobs and gained a lot of experience. I want to dedicate myself fully to the job I've always dreamed of.
-      </p>
+Hello everyone, my name is Tuyen. I am 21 years old. I was born and raised in Vinh Phuc. Currently, I am a young man with many ambitions. Therefore, my goals and motivations are my work, friends, family, and money.
+I aspire to dedicate myself fully to my work and gain more experience.     </p>
     </div>
   </section>
 
